tests/NormalTests/paczka2/big_fuzzy/42988553.err
Error in line 5: u5fBB S823 62,6
Error in line 9: 6Gq4IX S823 2,7
Error in line 15: vyBeEJxkBP A196 48,1
Error in line 26: 6Gq4IX A321 3,7
Error in line 24: u5fBB S823 363,8
Error in line 20: yz07JXAORz S823 75,0
Error in line 30: u5fBB S911 77,6
Error in line 37: u5fBB S823 76,2
Error in line 53: yz07JXAORz A196 72,6
Error in line 50: vyBeEJxkBP A321 44,2
Error in line 64: vyBeEJxkBP A321 15,2
Error in line 79: KtDfqS S8/3 85,/
Error in line 80: KtDfqS A321 86,0
Error in line 85: 6Gq4IX S911 94,2
Error in line 77: E5p1nE S911 52,5
Error in line 98: KtDfqS A196 24,7
Error in line 102: vyBeEJxkBP S823 6,5
Error in line 99: KtDfqS S911 26,8
Error in line 112: KtDfqS S911 6,6
Error in line 117: 6Gq4IX A196 29,2
Error in line 118: 6Gq4IX S823 29,2
Error in line 135: vyBeEJxkBP A321 22,17
Error in line 132: vyBeEJxkBP S823 45,5
Error in line 149: u5fBB A196 51,9
Error in line 143: yz07JXAORz A321 69,6
Error in line 154: yz07JXAORz S823 95,4
Error in line 150: A321 A321 36,8
Error in line 160: 6Gq4IX A196 48,8
Error in line 136: vyBeEJxkBP A321 70,4
Error in line 164: vyBeEJxkBP A196 93,5
Error in line 165: vyBeEJxkBP S911 56,5
Error in line 162: 6Gq4IX S823 16,5
Error in line 166: u5fBB S911 160,5
Error in line 168: vyBeEJxkBP S823 20,8
Error in line 182: vyBeEJxkBP S911 56,8
Error in line 179: A321 S911 15,0
Error in line 173: 6Gq4IX S911 180,5
Error in line 184: A321 A196 98,4
Error in line 198: KtDfqS A321 9,6
Error in line 209: u5fBB S823 94,5
Error in line 206: KtDfqS A196 70,3
Error in line 177: yz07JXAORz A196 42,4
Error in line 211: KtDfqS S823 25,2
Error in line 217: A321 A196 12,9
Error in line 228: 6Gq4IX A321 177,2
Error in line 202: vyBeEJxkBP A196 362,4
